--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
 scikit-learn
+pandas
+streamlit
+sklearn.model_selection
+sklearn.linear_model
+pandas
+seaborn
+matplotlib
+matplotlib.pyplot
+numpy
